--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
   "homepage": "https://github.com/MarquezGG/se_project_express#readme",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "celebrate": "^15.0.3",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "express-winston": "^4.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^8.19.1",
-    "validator": "^13.15.15"
+    "validator": "^13.15.23",
+    "winston": "^3.18.3"
   },
   "devDependencies": {
     "eslint": "^8.57.1",
